API: event handler added for put events

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,6 @@ services:
       - es_data:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
-#      - "9300:9300"
     ulimits:
       memlock:
         soft: -1
@@ -32,7 +31,20 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+  rabbitmq:
+    image: rabbitmq:3-management
+    environment:
+      - RABBITMQ_DEFAULT_USER=user
+      - RABBITMQ_DEFAULT_PASS=secret
+    ports:
+      - "5672:5672" # AMQP protocol port
+      - "15672:15672" # Management UI port
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    # Optional: configuration for restart policy
+    restart: always
 
 volumes:
   minio_data:
   es_data:
+  rabbitmq_data:
