--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,4 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=secret
-#spring.rabbitmq.addresses=amqp://user:secret@localhost
+spring.rabbitmq.virtual-host=my_vhost
